<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Moviery</string>
    <string name="api_key" translatable="false">fb640042b4bc08f6f7f65fbd8573f2a9</string>
    <string name="base_url" translatable="false">http://api.themoviedb.org/3/</string>
    <string name="original_image_url" translatable="false" tools:ignore="UnusedResources">https://image.tmdb.org/t/p/original</string>
    <string name="w45_logo_image_url" translatable="false" tools:ignore="UnusedResources">https://image.tmdb.org/t/p/w45</string>
    <string name="w92_logo_image_url" translatable="false" tools:ignore="UnusedResources">https://image.tmdb.org/t/p/w92</string>
    <string name="w154_logo_image_url" translatable="false">https://image.tmdb.org/t/p/w154</string>
    <string name="w185_logo_image_url" translatable="false" tools:ignore="UnusedResources">https://image.tmdb.org/t/p/w185</string>
    <string name="w300_logo_image_url" translatable="false" tools:ignore="UnusedResources">https://image.tmdb.org/t/p/w300</string>
    <string name="w500_logo_image_url" translatable="false" tools:ignore="UnusedResources">https://image.tmdb.org/t/p/w500</string>
    <string name="w92_poster_image_url" translatable="false" tools:ignore="UnusedResources">https://image.tmdb.org/t/p/w92</string>
    <string name="w154_poster_image_url" translatable="false">https://image.tmdb.org/t/p/w154</string>
    <string name="w185_poster_image_url" translatable="false" tools:ignore="UnusedResources">https://image.tmdb.org/t/p/w185</string>
    <string name="w342_poster_image_url" translatable="false">https://image.tmdb.org/t/p/w342</string>
    <string name="w500_poster_image_url" translatable="false">https://image.tmdb.org/t/p/w500</string>
    <string name="w780_poster_image_url" translatable="false" tools:ignore="UnusedResources">https://image.tmdb.org/t/p/w780</string>
    <string name="w45_profile_image_url" translatable="false" tools:ignore="UnusedResources">https://image.tmdb.org/t/p/w45</string>
    <string name="w185_profile_image_url" translatable="false">https://image.tmdb.org/t/p/w185</string>
    <string name="h632_profile_image_url" translatable="false">https://image.tmdb.org/t/p/h632</string>
    <string name="w300_backdrop_image_url" translatable="false">https://image.tmdb.org/t/p/w300</string>
    <string name="w780_backdrop_image_url" translatable="false">https://image.tmdb.org/t/p/w780</string>
    <string name="w1280_backdrop_image_url" translatable="false" tools:ignore="UnusedResources">https://image.tmdb.org/t/p/w1280</string>
    <string name="banner_ad_for_feed" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_for_detail" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_for_search" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_for_filter" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_for_my_profile_expand" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_for_add_delete" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_ad_for_more" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="themoviedb" translatable="false">themoviedb.org</string>
    <string name="flaticon" translatable="false">flaticon.com</string>
    <string name="copyright_1" translatable="false">© Copyright</string>
    <string name="copyright_2" translatable="false">All rights reserved | Powered by MartianDeveloper</string>
    <string name="copyright_3" translatable="false">Powered by MartianDeveloper</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="trending">Trending</string>
    <string name="popular">Popular</string>
    <string name="log_out">Log out</string>
    <string name="movies">Movies</string>
    <string name="series_n_tv_shows">Series &amp; Tv Shows</string>
    <string name="actors">Actors</string>
    <string name="popularity">Popularity</string>
    <string name="about">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="tell_others">Tell others what you think about this app</string>
    <string name="remind_me_later">Remind Me Later</string>
    <string name="my_profile">My Profile</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="music">Music</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="science_fiction">Science-Fiction</string>
    <string name="thriller">Thriller</string>
    <string name="war">War</string>
    <string name="western">Western</string>
    <string name="year">Year</string>
    <string name="eg_2020">e.g. 2020</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="filter">Filter</string>
    <string name="no_ads">No Ads</string>
    <string name="bollywood">Bollywood</string>
    <string name="agree">Agree</string>
    <string name="user_agreement_1">
        This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
        If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
        The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Moviery - Movie Collection &amp; Inventory unless otherwise defined in this Privacy Policy.
    </string>
    <string name="information_collection_and_use">Information Collection and Use</string>
    <string name="user_agreement_2">
        For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to data. The information that I request will be retained on your device and is not collected by me in any way.
        The app does use third party services that may collect information used to identify you.
        Link to privacy policy of third party service providers used by the app
    </string>
    <string name="privacy_apps">Google Play Services\nAdMob\nFirebase Analytics</string>
    <string name="log_data">Log Data</string>
    <string name="user_agreement_3">
        I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data.
        This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.
    </string>
    <string name="cookies">Cookies</string>
    <string name="user_agreement_4">
        Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.
        This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services.
        You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.
    </string>
    <string name="service_providers">Service Providers</string>
    <string name="user_agreement_5">
        I may employ third-party companies and individuals due to the following reasons:
        To facilitate our Service;
        To provide the Service on our behalf;
        To perform Service-related services; or
        To assist us in analyzing how our Service is used.
        I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf.
        However, they are obligated not to disclose or use the information for any other purpose.
    </string>
    <string name="security">Security</string>
    <string name="user_agreement_6">
        I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100\% secure and reliable, and I cannot guarantee its absolute security.
    </string>
    <string name="links_to_other_sites">Links to Other Sites</string>
    <string name="user_agreement_7">
        This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
    </string>
    <string name="children_privacy">Children\’s Privacy</string>
    <string name="user_agreement_8">
        These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.
    </string>
    <string name="changes_to_this_privacy_policy">Changes to This Privacy Policy</string>
    <string name="user_agreement_9">
        I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.
    </string>
    <string name="user_agreement_10">
        If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at app.martiandeveloper@gmail.com.
    </string>
</resources>