<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/movies"
            android:name="@string/movies"
            android:checkable="true"
            android:icon="@drawable/ic_movies"
            android:title="@string/movies" />
        <item
            android:id="@+id/tv"
            android:name="@string/series_n_tv_shows"
            android:checkable="true"
            android:icon="@drawable/ic_tv"
            android:title="@string/series_n_tv_shows" />
        <item
            android:id="@+id/actors"
            android:name="@string/actors"
            android:checkable="true"
            android:icon="@drawable/actors"
            android:title="@string/actors" />

        <item
            android:id="@+id/my_profile"
            android:name="@string/my_profile"
            android:checkable="true"
            android:icon="@drawable/ic_my_profile"
            android:title="@string/my_profile" />

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/no_ads"
            android:name="@string/no_ads"
            android:checkable="false"
            android:icon="@drawable/ic_no_ads"
            android:title="@string/no_ads" />
        <item
            android:id="@+id/rate_us"
            android:name="@string/rate_us"
            android:checkable="false"
            android:icon="@drawable/rate_us"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/share"
            android:name="@string/share"
            android:checkable="false"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />
        <item
            android:id="@+id/about"
            android:name="@string/about"
            android:checkable="false"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
        <item
            android:id="@+id/log_out"
            android:name="@string/log_out"
            android:checkable="false"
            android:icon="@drawable/ic_log_out"
            android:title="@string/log_out" />

    </group>

</menu>